fix display overflow and add keyboard inputs

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 
 .calculator-container {
     width: 400px;
-    height: 640px;
     background-color: #696969;
     border: solid 5px #000000;
     border-radius: 10px;
@@ -24,21 +23,22 @@ body {
 
 .display {
     width: 100%;
-    height: 150px;
+    min-height: 150px;
     background-color: #15251c;
     border: solid 5px #000000;
     border-radius: 10px;
     margin-bottom: 10px;
+    font-size: 50px;
     display: flex;
-    justify-content: center;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 10px;
 }
 
-.display input {
-    background-color: #15251c;
-    outline: none;
-    border: none;
+.text {
     width: 100%;
-    font-size: 50px;
+    height: 100%;
+    overflow-wrap:break-word;
     text-align: right;
 }
 
